# build-systems

1/: CMakeLists.txt
1/A/: index.h  preparing.py
1/B/: CMakeLists.txt  lib.cpp  lib.h
1/C/: main.cpp  main.h  main_test.cpp  tests.cpp
2/: Dockerfile  run.sh
3/: README.md  test.sh
3/TechProgSimpleLibrary/: CMakeLists.txt
3/TechProgSimpleLibrary/src/: Makefile
5/: WORKSPACE  build.sh
5/PatternsCollection/AbstractFactory/cpp-source/: BUILD.bazel  main_serializer.cpp
5/PatternsCollection/AbstractFactory/cpp-source/factories/: BUILD.bazel
5/PatternsCollection/AbstractFactory/cpp-source/rooms/: BUILD.bazel
5/PatternsCollection/AbstractFactory/cpp-source/serializers/: BUILD.bazel  CMakeLists.txt  GameSerializer.h  RoomSerializer.h
5/PatternsCollection/Bridge/cpp-source/: BUILD.bazel
5/PatternsCollection/Builder/cpp-source/: BUILD.bazel
5/PatternsCollection/Builder/cpp-source/builders/: BUILD.bazel
5/PatternsCollection/Builder/cpp-source/builders/base/: BUILD.bazel
5/PatternsCollection/ChainResponsibility/cpp-source/: BUILD.bazel
5/PatternsCollection/Command/cpp-source/: BUILD.bazel
5/PatternsCollection/Command/cpp-source/commands/: BUILD.bazel
5/PatternsCollection/Command/cpp-source/cookery/: BUILD.bazel
5/PatternsCollection/Composite/cpp-source/: BUILD.bazel
5/PatternsCollection/Decorator/cpp-source/: BUILD.bazel
5/PatternsCollection/FactoryMethod/cpp-source/: BUILD.bazel  main.cpp
5/PatternsCollection/FactoryMethod/cpp-source/routers/: Hub.cpp  Hub.h  Router.h  WifiRouter.cpp
5/PatternsCollection/Mediator/cpp-source/: BUILD.bazel  main.cpp
5/PatternsCollection/Mediator/cpp-source/Common/: Dispatcher.h
5/PatternsCollection/Mediator/cpp-source/dispatcher/: PlaneDispatcher.cpp  PlaneDispatcher.h
5/PatternsCollection/Mediator/cpp-source/vehicles/: Plane.cpp  Plane.h
5/PatternsCollection/Observer/cpp-source/: BUILD.bazel
5/PatternsCollection/Prototype/cpp-source/: BUILD.bazel
5/PatternsCollection/State/cpp-source/: BUILD.bazel
5/PatternsCollection/Visitor/cpp-source/: BUILD.bazel
